docs/apache-airflow/2.3.2/_sources/_api/airflow/models/sensorinstance/index.rst.txt
:py:mod:`airflow.models.sensorinstance`
=======================================

.. py:module:: airflow.models.sensorinstance


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.models.sensorinstance.SensorInstance




.. py:class:: SensorInstance(ti)

   Bases: :py:obj:`airflow.models.base.Base`

   SensorInstance support the smart sensor service. It stores the sensor task states
   and context that required for poking include poke context and execution context.
   In sensor_instance table we also save the sensor operator classpath so that inside
   smart sensor there is no need to import the dagbag and create task object for each
   sensor task.

   SensorInstance include another set of columns to support the smart sensor shard on
   large number of sensor instance. The key idea is to generate the hash code from the
   poke context and use it to map to a shorter shard code which can be used as an index.
   Every smart sensor process takes care of tasks whose `shardcode` are in a certain range.


   .. py:attribute:: __tablename__
      :annotation: = sensor_instance

      

   .. py:attribute:: id
      

      

   .. py:attribute:: task_id
      

      

   .. py:attribute:: dag_id
      

      

   .. py:attribute:: execution_date
      

      

   .. py:attribute:: state
      

      

   .. py:attribute:: start_date
      

      

   .. py:attribute:: operator
      

      

   .. py:attribute:: op_classpath
      

      

   .. py:attribute:: hashcode
      

      

   .. py:attribute:: shardcode
      

      

   .. py:attribute:: poke_context
      

      

   .. py:attribute:: execution_context
      

      

   .. py:attribute:: created_at
      

      

   .. py:attribute:: updated_at
      

      

   .. py:attribute:: map_index
      

      

   .. py:attribute:: __table_args__
      

      

   .. py:method:: get_classpath(obj)
      :staticmethod:

      Get the object dotted class path. Used for getting operator classpath.

      :param obj:
      :return: The class path of input object
      :rtype: str


   .. py:method:: register(cls, ti, poke_context, execution_context, session=None)
      :classmethod:

      Register task instance ti for a sensor in sensor_instance table. Persist the
      context used for a sensor and set the sensor_instance table state to sensing.

      :param ti: The task instance for the sensor to be registered.
      :param poke_context: Context used for sensor poke function.
      :param execution_context: Context used for execute sensor such as timeout
          setting and email configuration.
      :param session: SQLAlchemy ORM Session
      :return: True if the ti was registered successfully.
      :rtype: Boolean


   .. py:method:: try_number(self)
      :property:

      Return the try number that this task number will be when it is actually
      run.
      If the TI is currently running, this will match the column in the
      database, in all other cases this will be incremented.


   .. py:method:: __repr__(self)


   .. py:method:: get_dagrun(self, session)

      Returns the DagRun for this SensorInstance

      :param session: SQLAlchemy ORM Session
      :return: DagRun



